--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <input type="checkbox" id="toggle">
-    <label for="toggle"></label>
+    <label for="toggle">
+        <div class="circle"></div>
+    </label>
 </body>
 </html>
